--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,14 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-ide-helper": "2.6.1",
+        "caouecs/laravel-lang": "~3.0",
+        "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.5",
         "laravel/cashier": "~7.0",
         "laravel/framework": "5.6.7",
+        "laravel/socialite": "^3.2.0",
         "laravel/tinker": "^1.0",
         "yajra/laravel-datatables-oracle": "^8.4"
     },
